# traj_opti_jumping

./: .gitignore  README.md  dynamics.py  dynamics_test.py  environment.yml  fk_test.rrd  forward_jump_test_today.rrd  go2_forward_jump_test.rrd  go2_jumping_trajectory.npz  go2_printFrames.py  go2_stand.py  go2_stand_dyn.py  go2_stand_ik_test.rrd  go2_stand_ik_z.py  go2_stand_test.rrd  kinematics.py  math_utils.py  notebook.ipynb  opt_contact_timing.py  pin_model_view_test.py  pin_model_view_test2.py  q_test.rrd  reference_trajectory.txt  requirements.txt  robot.py  ruff.toml  run.py  run_knee.py  run_tests.py  setup.py  trajopt_contact_timing.py  trajopt_data.py  trajopt_full_dynamics.py  trajopt_logging.py  trajopt_simple.py  trajopt_simple_backflip.py  trajopt_variable_frequency.py
.conda/conda-meta/: bzip2-1.0.8-h99b78c6_7.json  ca-certificates-2025.6.15-hbd8a1cb_0.json  history  libexpat-2.7.0-h286801f_0.json  libffi-3.4.6-h1da3d7d_1.json  liblzma-5.8.1-h39f12f2_2.json  libsqlite-3.50.1-h3f77e49_0.json  libzlib-1.3.1-h8359307_2.json  ncurses-6.5-h5e97a16_3.json  openssl-3.5.0-h81ee809_1.json  pip-25.1.1-pyh8b19718_0.json  (+6 more)
archieved/: go2_stand.py
go2.egg-info/: PKG-INFO  SOURCES.txt
go2/mpac_logging/: README.md  go2_forward_jump_test.rrd  pyproject.toml
go2/mpac_logging/examples/: multi_robot_logger.py  simple_robot_logger.py
go2/mpac_logging/mpac_logging/: __init__.py  robot_zoo.py
go2/mpac_logging/mpac_logging.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
go2/mpac_logging/mpac_logging/rerun/: __init__.py  robot_logger.py  utils.py
(+232 files in other folders)
